# notifyserv

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  TODO  autogen.sh  configure.ac
src/: irc.c  irc.h  listen.c  listen.h  log.c  log.h  misc.c  misc.h  notify-irc.c  notify-irc.h  notifyserv.c  notifyserv.h  preferences.c  preferences.h
